# SPRx

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts
.agents/skills/run-sprx/: SKILL.md  driver.ps1
.claude/skills/run-sprx/: SKILL.md
scripts/: prepare-portable.mjs
src/: App.tsx  ExportSettingsDialog.tsx  Landing.tsx  ThingsView.tsx  Viewer.tsx  index.css  settings.ts  spr.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: probe.rs  probe_dat.rs
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: dat.rs  lib.rs  main.rs  protocol.rs  spr.rs
