[package]
name = "sprx"
version = "0.1.0"
description = "SPRx — fast Tibia .spr viewer and spritesheet exporter"
authors = ["Frenvius <frenvius@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "sprx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
image = { version = "0.24", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
